# happycommit

./: Cargo.toml  README.md  add-openai-api-key.sh  git-commit-gpt  install-commit-gpt.sh  justfile
src/: main.rs
