[package]
name = "happycommit"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
async-openai = "0.10.3"
tokio = { version="1.27.0", features=["full"] }
tiktoken-rs = { git="https://github.com/zurawiki/tiktoken-rs", version = "0.4.1", features=["async-openai"] }
lazy_static = "1.4.0"
anyhow = "1.0.70"
futures = "0.3.28"
stream-reduce = "0.1.0"
tempfile = "3.5.0"
shell-escape = "0.1.5"
dirs = "5.0.0"
toml = "0.7.3"
